Fix primaries on FirefoxOS!
* Save a marker in sessionStorage that indicates the return from a primary is in a native context. If so, do not attempt to set up the channel.
* Add the ability to redirect to a site from the dev menu. This is useful on FirefoxOS where the trusted UI has no URL bar.

--- a/resources/static/common/css/style.css
+++ b/resources/static/common/css/style.css
@@ -620,3 +620,7 @@ footer .help {
 #development li a {
   color: #fff;
 }
+
+#development input[type=text] {
+  padding: 3px 5px;
+}
